--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
     font-family: 'PT Sans', sans-serif;
   }
   
+  /*
   .home,
   .services,
   .products,
@@ -43,3 +44,4 @@
     font-size: 100px;
   }
 
+*/
