--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -45,6 +45,18 @@ h1 {
   text-decoration: none;
 }
 
+.cards__item__link:hover {
+  display: flex;
+  flex-flow: column;
+  width: 100%;
+  box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
+  -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+  filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
+  border-radius: 10px;
+  overflow: hidden;
+  text-decoration: none;
+}
+
 .cards__item__pic-wrap {
   position: relative;
   width: 100%;
@@ -57,6 +69,7 @@ h1 {
   animation-duration: 2s;
 }
 
+
 .cards__item__pic-wrap::after {
   content: attr(data-category);
   position: absolute;
@@ -67,7 +80,7 @@ h1 {
   font-size: 12px;
   font-weight: 700;
   color: #fff;
-  background-color: #1f98f4;
+  background-color: orange;
   box-sizing: border-box;
 }
 
@@ -99,6 +112,7 @@ h1 {
   font-size: 18px;
   line-height: 24px;
 }
+
 
 @media only screen and (min-width: 1200px) {
   .content__blog__container {
