--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -57,19 +57,22 @@ h1 {
   text-decoration: none;
 }
 
+
 .cards__item__pic-wrap {
   position: relative;
   width: 100%;
   padding-top: 67%;
   overflow: hidden;
+  transform: scale(1.1);
 }
+
 
 .fade-img {
   animation-name: fade-img;
   animation-duration: 2s;
 }
 
-
+/*
 .cards__item__pic-wrap::after {
   content: attr(data-category);
   position: absolute;
@@ -83,7 +86,7 @@ h1 {
   background-color: orange;
   box-sizing: border-box;
 }
-
+*/
 .cards__item__img {
   position: absolute;
   top: 0;
