--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -15,13 +15,17 @@
   justify-content: center;
   align-items: center;
   height: 80px;
-  max-width: 1500px;
+  /*
+  line below makes the nav items in the navbar stay in the right
+  */
+  max-width: 1800px;
 }
 
 .navbar-logo {
   color: #fff;
   justify-self: start;
   margin-left: 20px;
+  margin-right: auto;
   cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
@@ -46,9 +50,8 @@
   grid-gap: 10px;
   list-style: none;
   text-align: center;
-  width: 90vw;
-  justify-content: end;
-  margin-right: 20rem;
+  width: 100vw;
+  justify-content: end !important;
 }
 
 .nav-item {
