added 3 more paintings and fixed centering problem in aj_2

--- a/src/components/pages/Watercolors/ProductItem.css
+++ b/src/components/pages/Watercolors/ProductItem.css
@@ -43,6 +43,7 @@ body {
     border-radius: 10px;
     overflow: hidden;
     text-decoration: none;
+    background-color: white;
 }
 
 .container-desc{
